added secret variable

--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -4,7 +4,7 @@ on:
   push
 
 env:
-  ACCESS_ID: ${{ vars.ACCESS_ID }}
+  ACCESS_ID: ${{ secrets.ACCESS_ID }}
 
 jobs:
   build:
@@ -12,4 +12,4 @@ jobs:
 
     steps:
     - name: Echo ACCESS_ID
-      run: echo $ACCESS_ID
+      run: echo ${{ secrets.ACCESS_ID }}
